// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/DescriptionList/DescriptionList Defaults play-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28">
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithAttributes play-test 1`] = `
<div data-test-block="true">
  <dl id="htmlId"
      class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28     dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithIsVerticalOnMobile smoke-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28">
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithRef play-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28"
      data-testid="123ID"
      id="dummyIdForwardedFromRef"
  >
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithSizeSmallAndBold smoke-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28  _descriptionList_small_1sffk_38 _descriptionListTermRegular_1sffk_20 _descriptionListDescriptionBold_1sffk_17">
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28 _spacing_1sffk_1">
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithVariantHorizontal smoke-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_horizontal_1sffk_23 _spacing_1sffk_1">
    <div class="_childWrapper_1sffk_42">
      <dt class="_term_ywtjl_1">
        Saksbehandler
      </dt>
      <dd class="_description_ywtjl_6">
        Kenneth Performance
      </dd>
    </div>
    <div class="_childWrapper_1sffk_42">
      <dt class="_term_ywtjl_1">
        Status
      </dt>
      <dd class="_description_ywtjl_6">
        Under behandling
      </dd>
    </div>
    <div class="_childWrapper_1sffk_42">
      <dt class="_term_ywtjl_1">
        Sist endret
      </dt>
      <dd class="_description_ywtjl_6">
        30.12.2013
      </dd>
    </div>
    <div class="_childWrapper_1sffk_42">
      <dt class="_term_ywtjl_1">
        Frist
      </dt>
      <dd class="_description_ywtjl_6">
        30.12.2013
      </dd>
    </div>
    <div class="_childWrapper_1sffk_42">
      <dt class="_term_ywtjl_1">
        Farge
      </dt>
      <dd class="_description_ywtjl_6">
        Smaragdgrønn
      </dd>
    </div>
    <div class="_childWrapper_1sffk_42">
      <dt class="_term_ywtjl_1">
        Først endret
      </dt>
      <dd class="_description_ywtjl_6">
        30.12.2010
      </dd>
    </div>
  </dl>
  <dl class="_descriptionList_1sffk_5 _descriptionList_horizontal_1sffk_23">
    <div>
      <dt class="_term_ywtjl_1">
        Saksbehandler
      </dt>
      <dd class="_description_ywtjl_6">
        Kenneth Performance
      </dd>
    </div>
    <div>
      <dt class="_term_ywtjl_1">
        Status
      </dt>
      <dd class="_description_ywtjl_6">
        Under behandling
      </dd>
    </div>
    <div>
      <dt class="_term_ywtjl_1">
        Sist endret
      </dt>
      <dd class="_description_ywtjl_6">
        30.12.2013
      </dd>
    </div>
    <div>
      <dt class="_term_ywtjl_1">
        Frist
      </dt>
      <dd class="_description_ywtjl_6">
        30.12.2013
      </dd>
    </div>
    <div>
      <dt class="_term_ywtjl_1">
        Farge
      </dt>
      <dd class="_description_ywtjl_6">
        Smaragdgrønn
      </dd>
    </div>
    <div>
      <dt class="_term_ywtjl_1">
        Først endret
      </dt>
      <dd class="_description_ywtjl_6">
        30.12.2010
      </dd>
    </div>
  </dl>
</div>
`;

exports[`Tester/DescriptionList/DescriptionList WithVariantVertial smoke-test 1`] = `
<div data-test-block="true">
  <dl class="_descriptionList_1sffk_5 _descriptionList_vertical_1sffk_28 _spacing_1sffk_1">
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
  <dl class="_descriptionList_1sffk_5 _descriptionList_verticalVertical_1sffk_33">
    <dt class="_term_ywtjl_1">
      Saksbehandler
    </dt>
    <dd class="_description_ywtjl_6">
      Kenneth Performance
    </dd>
    <dt class="_term_ywtjl_1">
      Status
    </dt>
    <dd class="_description_ywtjl_6">
      Under behandling
    </dd>
    <dt class="_term_ywtjl_1">
      Sist endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Frist
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2013
    </dd>
    <dt class="_term_ywtjl_1">
      Farge
    </dt>
    <dd class="_description_ywtjl_6">
      Smaragdgrønn
    </dd>
    <dt class="_term_ywtjl_1">
      Først endret
    </dt>
    <dd class="_description_ywtjl_6">
      30.12.2010
    </dd>
  </dl>
</div>
`;
